--- a/pages/index.html
+++ b/pages/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-
+<html lang="en">
 <head>
-    <h1>Sasha's Website is being built now...</h1>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
+    <h1>Sasha's Website is being built now...</h1>
     <p>Welcome to Sasha's site, we're still under construction!</p>
 </body>
+</html>
